changed height of buttons container as the previous change made the buttons exceed the size of the container and cause layout issues

--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ header {
 }
 #buttons {
     width: 100vw;
-    height: 10vh;
+    height: 20vh;
     display: flex;
     justify-content: space-around;
     align-items:center;
